[package]
name = "shuller"
description = "Lib to get links to images for your favourite tags on rule34 and any"
repository = "https://github.com/TOwInOK/shuller"
version = "2.0.6"
edition = "2021"
authors = ["TOwInOK"]
license = "MIT"
readme = "README.md"
keywords = ["async", "networking", "http", "rule34"]
categories = [
    "asynchronous",
    "web-programming",
    "parsing",
    "network-programming",
    "api-bindings",
]
documentation = "https://docs.rs/shuller"


[dependencies]
async-trait = "0.1.80"
serde = { version = "1.0.203", features = ["derive"] }
uller = { version = "0.1.22", features = ["juller"] }
url = "2.5.2"
tinyrand = "0.5.0"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros"] }
shuller = { path = ".", features = ["full"] }
[features]
default = []
full = ["rand"]
rand = []

[profile.dev]
opt-level = 1
debug = true

[profile.release]
strip = true
opt-level = 3
lto = true
debug = false
panic = "unwind"

[package.metadata.docs.rs]
all-features = true
